feat(host-api): 增加 workflow 手动重排队
